--- a/data/ui/filesearch.glade
+++ b/data/ui/filesearch.glade
@@ -193,7 +193,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">&lt;b&gt;File _Name Patterns&lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;File _Name Patterns:&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">name_entry</property>
@@ -282,8 +282,10 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Places to Search&lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Plac_es to Search:&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">path_tree_view</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -482,7 +484,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">Only search for files of following types</property>
+                            <property name="label" translatable="yes">Only search for files of following types:</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -607,7 +609,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">&lt;b&gt;File Contain_s&lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;File Contain_s:&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">content_entry</property>
