Adding hidden extra tab in file properties dialog.
Set name for 'Permissions' tab content: permissions_tab
(so it may be hidden if required).
Added new tab: label is extra_tab_label, content is extra_tab
(it is invisible now and have no content).

Rationale: planned extensions may want to hide properties tab (for virtual
folders which cannot have them) and may create own content for own tab.

--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -415,7 +415,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkAlignment" id="alignment1">
+              <object class="GtkAlignment" id="permissions_tab">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="top_padding">6</property>
@@ -730,6 +730,32 @@
               </object>
               <packing>
                 <property name="position">1</property>
+                <property name="tab_fill">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="extra_tab">
+                <property name="can_focus">False</property>
+                <property name="top_padding">6</property>
+                <property name="bottom_padding">6</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel" id="extra_tab_label">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">tab3</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="position">2</property>
                 <property name="tab_fill">False</property>
               </packing>
             </child>
