--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -93,6 +93,7 @@
                         <child>
                           <object class="GtkImage" id="icon">
                             <property name="visible">True</property>
+                            <property name="can_focus">False</property>
                             <property name="events">GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text" translatable="yes">Icon of the file in folder view</property>
@@ -104,8 +105,8 @@
                       <packing>
                         <property name="bottom_attach">2</property>
                         <property name="x_options">GTK_FILL</property>
-                        <property name="x_padding">12</property>
                         <property name="y_options"></property>
+                        <property name="x_padding">12</property>
                       </packing>
                     </child>
                     <child>
@@ -124,8 +125,8 @@
                     <child>
                       <object class="GtkLabel" id="file">
                         <property name="can_focus">True</property>
-                        <property name="selectable">True</property>
                         <property name="xalign">0</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
@@ -357,6 +358,7 @@
                     <child>
                       <object class="GtkLabel" id="size_on_disk">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="xalign">0</property>
                       </object>
                       <packing>
@@ -388,6 +390,7 @@
                     <child>
                       <object class="GtkLabel" id="mtime">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="xalign">0</property>
                       </object>
                       <packing>
@@ -419,6 +422,7 @@
                     <child>
                       <object class="GtkLabel" id="atime">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="xalign">0</property>
                       </object>
                       <packing>
@@ -740,8 +744,24 @@
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="fill">True</property>
+                        <property name="fill">False</property>
                         <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="hidden">
+                        <property name="label" translatable="yes">Hidden file</property>
+                        <property name="visible">False</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">False</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
