--- a/data/ui/choose-icon.ui
+++ b/data/ui/choose-icon.ui
@@ -80,7 +80,7 @@
                       <object class="GtkRadioButton" id="theme">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">System icon theme</property>
+                        <property name="label" translatable="yes" comments="genitive case is here: Choose icon from: ...">system icon theme</property>
                         <property name="use_underline">True</property>
                         <property name="relief">GTK_RELIEF_NORMAL</property>
                         <property name="focus_on_click">True</property>
@@ -98,7 +98,7 @@
                       <object class="GtkRadioButton" id="files">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label" translatable="yes">Image files</property>
+                        <property name="label" translatable="yes" comments="genitive case is here: Choose icon from: ...">image files</property>
                         <property name="use_underline">True</property>
                         <property name="relief">GTK_RELIEF_NORMAL</property>
                         <property name="focus_on_click">True</property>
@@ -120,7 +120,7 @@
             <child type="label">
               <object class="GtkLabel" id="label8">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;b&gt;Choose Icon From:&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;Choose icon from:&lt;/b&gt;</property>
                 <property name="use_underline">False</property>
                 <property name="use_markup">True</property>
                 <property name="justify">GTK_JUSTIFY_LEFT</property>
