Use the same translatable string where it means exactly the same.
Example is:
_Run in terminal emulator
vs
_Execute in terminal emulator

So use "_Execute in terminal emulator" in both places.

There are 3 more such pairs found.

--- a/data/ui/app-chooser.glade
+++ b/data/ui/app-chooser.glade
@@ -140,7 +140,7 @@
                             </child>
                             <child>
                               <object class="GtkButton" id="browse_btn">
-                                <property name="label" translatable="yes">_Browse</property>
+                                <property name="label" translatable="yes">_Browse...</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
